2003-06-15  Kevin Vandersloot

	* drivemount.c: add keybindings for eject and browse

2003-06-03  Kevin Vandersloot

	* drivemount.c: expand for Fitts' law

2003-05-07  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify the action area of the preferences dialog.  

2003-04-22  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  More HIGification of the preferences dialog.  
	Also, hook up a help button.
	
	* drivemount.c:  Hook up help in the popup menu.

2003-04-03  Kevin Vandersloot <kfv101@psu.edu>

	* drivemount.c: If the locale is not utf8 then convert the error string to utf8. Fixes 
	bug #95480

2003-04-01  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: HIGify this dialog
	
	* drivemount.c: fix small problem that contributed to custom icon problems

2003-03-30  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: translate frame label. Fixes bug #103091

2003-03-30  Kevin Vandersloot <kfv101@psu.edu>

	* properties.c: fix saving of custom icons. Fixes bug #90922

2003-01-18 John Fleck <jfleck@inkstain.net>

	* help/C/Makefile.am
	fixing a "doh" - thanks to Dan Mills

2003-01-04 John Fleck <jfleck@inkstain.net>

	add 
	* help/Makefile.am
	* help/C/Makefile.am
	* help/C/drivemount-C.omf
	change
	* Makefile.am
	install help docs

2002-12-14  Fernando Herrera <fherrera@onirica.com>
	* GNOME_DriveMountApplet.server.in.in: added bugzilla attributtes

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_DriveMountApplet.xml: Added a separator in the
	menu. May fix bug #89864

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* drivemount.c: (browse_cb), (about_cb), (mount_cb):
	* properties.c: (properties_show): kill the
	HAVE_GTK_MULTIHEAD conditionals - we require gtk
	HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* drivemount.c: upd.

2002-07-18  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install applet in libexec.
