@@ -1,3 +1,10 @@
+Mon Jul 07 11:44:58 2003  George Lebl <jirka@5z.com>
+
+	* properties.c: Follow key-writability
+
+	* drivemount.[ch], properties.c: HIGify the error dialogue boxes
+	  with code yet again stolen from gsearchtool
+
 2003-06-15  Kevin Vandersloot
 
 	* drivemount.c: add keybindings for eject and browse
